<resources>
    <string name="app_name">Calculadora</string>
    <string name="n_0">0</string>
    <string name="n_1">1</string>
    <string name="n_2">2</string>
    <string name="n_3">3</string>
    <string name="n_4">4</string>
    <string name="n_5">5</string>
    <string name="n_6">6</string>
    <string name="n_7">7</string>
    <string name="n_8">8</string>
    <string name="n_9">9</string>
    <string name="ponto">.</string>
    <string name="soma">+</string>
    <string name="subtracao">-</string>
    <string name="multiplicacao">x</string>
    <string name="divisao">/</string>
    <string name="resultado">=</string>
    <string name="raiz_quadrada">√</string>
    <string name="potencia">^</string>
    <string name="fatorial">!</string>
    <string name="limpa">C</string>
</resources>
    